# python-base-project

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci-pr.yml
app/: __init__.py
tests/integration/: test_ main_app.py
tests/unit/: test_main_app.py
