[tool.poetry]
name = "python-base-project"
version = "0.1.0"
description = "Base structure for python project"
authors = ["Natan Nascimento <natanascimentom@outlook.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
start = "app:main"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
